<resources>
    <string name="app_name">TeckTrove</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_log_in">Log in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome"</string>
    <string name="dont_have_acount">"Don't Have an Account ?"</string>
    <string name="already_have_acount">Already have an Account ?</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full name</string>
    <string name="phone">+30</string>
    <string name="mobile_number">Mobile number</string>
    <string name="employer">Employer</string>
    <string name="ok">OK</string>
    <string name="search">search</string>
    <string name="Cart">Cart</string>
    <string name="MyCart">My Cart</string>
    <string name="Purchase">Purchase</string>
    <string name="MySynthesis">Η Σύνθεση μου</string>
    <string name="MySynthesisContains">Η Σύνθεση μου περιέχει:</string>
    <string name="MySynthesisAdd">Πρόσθεσε στην σύνθεση:</string>
    <string name="CreateSynthesis">Τέλος και προσθήκη στο καλάθι</string>
    <string name="category">Επιλέξετε μια κατηγορία:</string>
    <string name="addToS">Προσθέστε στην σύνθεση:</string>
    <string name="synthesysC">H σύνθεση σας περιέχει:</string>
    <string name="complete">Ολοκλήρωση</string>
    <string name="saved">Αποθηκευμένα Προϊόντα</string>
    <string name="saveButton">Αποθήκευση</string>
    <string name="NameurS">Όνομα σύνθεσης </string>
    <string name="history_t">Ιστορικό Παραγγέλιων </string>
    <string name="details">Στοιχεία Παραγγελίας </string>


</resources>